--- a/data/css/style.css
+++ b/data/css/style.css
@@ -10,7 +10,7 @@ html,body{padding: 0; margin:0;width: 100%;height: 100%;overflow-x: hidden;font-
 .studentInfo th{padding-top: 12px;padding-bottom: 12px;text-align: center;background: #4CAF50;color: white;font-size: 15pt;}
 .header-row{border-radius: 10px;}
 #table:nth-child(even){background-color: #f2f2f2;}
-#table:nth-child(odd){background-color: #C8E6C9;}
+#table:nth-child(odd){background-color: #2196F3;}
 .studentInfo th:hover{background: #43A047;cursor: default;}
 .studentInfo td,.studentInfo th{width: 200px;}
 .delete-button-column{width: 70px!important;}
@@ -18,6 +18,6 @@ html,body{padding: 0; margin:0;width: 100%;height: 100%;overflow-x: hidden;font-
 /* ===== search block ===== */
 .search-block{text-align: center;margin-bottom: 50px;}.search-input{width: 100%;border-radius: 5px;padding: 5px;font-size: 12pt;font-weight: 700;border:none; border-bottom: 2px solid #4CAF50;background: none;}.search-input:focus{outline: none;}
 /* ===== student personal information page styles ends =====*/
-.st-add-part .form-control{width: 15%;display: inline-block;}
+.st-add-part input{width: 15%;display: inline-block;}
 .st-add-part .form-control::-webkit-input-placeholder {color: #000;}
 .delete-button-column button{border: none;background: none;}
