--- a/data/css/stylesheet.css
+++ b/data/css/stylesheet.css
@@ -17,7 +17,7 @@ html,body{
 	box-shadow: 8px 8px 20px #000;
 	border-radius: 8px;
 	display: grid;
-	grid-template-columns: 19% 81%;
+	grid-template-columns: 15% 85%;
 }
 /* ====== navbar elements ====== */
 .navbar{
@@ -117,7 +117,7 @@ html,body{
 .sidenav a{
 	padding: 8px 8px 8px 15px;
 	text-decoration: none;
-	font-size: 18px;
+	font-size: 14px;
 	color: #fff;
 	display: block;
 	font-weight:700;
@@ -276,6 +276,57 @@ html,body{
 	color: #E64A19;
 }
 
+
+/* ================= adding part ================== */
+.adding_block{
+	background: #fff;
+	margin: 20px 30px 30px 30px;
+	box-shadow: 0 0 10px #b3b3b3;
+}
+.adding_header_title{
+	padding: 5px 15px 15px 15px;
+	border-bottom: 1px solid #b9b9b9;
+}
+.adding_main_title{
+	padding: 0 15px;
+}
+.adding_main_title hr{
+	width: 45px;
+	margin: 10px 0;
+	border: 2px solid #042954;
+}
+.adding_block form span{
+	display: block;
+	margin: 8px 0;
+}
+.adding_inputs{
+	padding: 10px;
+}
+.adding_inputs input,.adding_inputs select{
+	width: 100%;
+	padding: 5px 10px;
+	border-radius: 3px;
+	border: none;
+	background: #EEEEEE;
+}
+.button_group{
+	margin: 40px 25px;
+}
+.button_group button{
+	width: 90px;
+	margin: 5px;
+	height: 38px;
+	border: none;
+	border-radius: 3px;
+	color: #fff;
+	font-weight: bold;
+}
+.button_group button:first-child{
+	background: #F8C504;
+}
+.button_group button:last-child{
+	background: #042954;
+}
 /* ===== end table part styles ===== */
 .st_add_part{
 	width: 95%;
@@ -402,6 +453,7 @@ input[type=number]::-webkit-outer-spin-button {
 	border: 2px solid #424242;
 	margin: 5px 0 5px 0;
 	font-size: 13pt;
+	transition: all 0.2s;
 }
 .login input:focus{
 	outline:none;
@@ -474,28 +526,18 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-top: 70px;
 	text-align: center;
 }
-.personal_image_block span label{
-	border: 2px solid #333366;
+.adding_inputs span label{
+	width: 100%;
+	border: 2px solid #EEEEEE;
+	background: #EEEEEE;
 	padding: 5px 20px 5px 20px;
 	border-radius: 2px;
-	margin: 10px 20px;
-	color: #333366;
+	color: #757575;
 	font-weight: bold;
-	font-size: 12pt;
+	font-size: 10pt;
 }
-.personal_image_block span label:hover,.personal_image_block span button:hover{
-	background: #333366;
-	color: #fff;
-}
-.personal_image_block span button{
-	border: 2px solid #333366;
-	padding: 5px 20px 5px 20px;
-	border-radius: 15px;
-	background: none;
-	color: #333366;
-	font-weight: bold;
-	font-size: 12pt;
-	outline: none;
+.adding_inputs span label:hover{
+	border-color: #BDBDBD; 
 }
 /* =============== */
 .personal_input_block{
@@ -558,14 +600,25 @@ input[type=number]::-webkit-outer-spin-button {
 	background: #333366;
 	color: #fff;
 }
-#datepicker{
-	width: 170px;
+.date_input{
+	display: grid;
+	grid-template-columns: 85% 15%;
+	width: 100%;
 }
-#clear-dates{
-	width: 25px;
-	padding: 2px;
+#datepicker{
+	grid-column: 1;
+	border-radius: 5px 0 0 5px;
+}
+#clear_dates{
+	padding: 2px 0;
 	margin:0;
-	background: #fff;
+	font-size: 10pt;
+	font-weight: bold;
+	border: 1px solid #eeeeee;
+	background: #EEEEEE;
+	grid-column: 2;
+	border-radius: 0 5px 5px 0;
+	outline: none;
 }
 #ui-datepicker-div{
 	border: 2px solid #333366;
@@ -577,4 +630,35 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight{
 	border-color: #00BCD4!important;
+}
+
+.rotate{
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+	transition: all 0.1s;
+}
+i.arrow_right{
+	transition: 0.1s;
+	-webkit-transition: 0.1s;
+	-moz-transition: 0.1s;
+	-ms-transition: 0.1s;
+	-o-transition: 0.1s;
+	float: right;
+	vertical-align: middle;
+	position: relative;
+	right: 10px;
+	margin: 2px;
+}
+.navValue{
+	padding: 2px;
+	font-size: 17px;
+	font-weight: bold;
+	border: none;
+	background: none;
+	margin: 10px 30px;
+}
+#student a,#dashboard a,#teacher a,#class a{
+	position: relative;
+	font-size: 12px;
+	padding-left: 40px;
 }
